Replace Boost.Program_options with cxxopts

--- a/10-11/CMakeLists.txt
+++ b/10-11/CMakeLists.txt
@@ -37,7 +37,7 @@ target_compile_features (${target_name} PRIVATE cxx_std_20)
 
 target_include_directories (${target_name} SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
 
-target_link_libraries (${target_name} Boost::program_options
+target_link_libraries (${target_name} cxxopts::cxxopts
                                       Threads::Threads)
 
 install (TARGETS ${target_name} DESTINATION bin)
