Replace string concatenations with fmtlib

--- a/10-11/CMakeLists.txt
+++ b/10-11/CMakeLists.txt
@@ -38,6 +38,7 @@ target_compile_features (${target_name} PRIVATE cxx_std_20)
 target_include_directories (${target_name} SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
 
 target_link_libraries (${target_name} cxxopts::cxxopts
+                                      fmt::fmt
                                       Threads::Threads)
 
 install (TARGETS ${target_name} DESTINATION bin)
