--- a/07-08/CMakeLists.txt
+++ b/07-08/CMakeLists.txt
@@ -34,6 +34,6 @@ target_compile_features (${target_name} PRIVATE cxx_std_20)
 
 target_include_directories (${target_name} SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
 
-target_link_libraries (${target_name} cxxopts::cxxopts)
+target_link_libraries (${target_name} cxxopts::cxxopts fmt::fmt)
 
 install (TARGETS ${target_name} DESTINATION bin)
